# txt2sql

./: .gitignore  LEEME.md  LICENSE  README.md  package.json
doc/: dudas_rust.md
fixtures/: infer-data-types.yaml  simple-data.yaml
rust/prueba/src/: main.rs
rust/txt2sql/: Cargo.toml
rust/txt2sql/src/: lib.rs  main.rs  txt2sql.rs  vecwritter.rs
rust/txt2sql/tests/: integration_tests.rs
tools/: package-lock.json  package.json
ts/: .eslintrc.yml  package-lock.json  package.json  tsconfig-common.json
ts/src/: tsconfig.json  txt2sql.ts
ts/test/: test-txt2sql.ts  tsconfig.json
ts/test/fixtures/: example-number-name.csv
